<resources>
    <string name="app_name">KotlinCourse</string>
    <string name="plus" translatable="false">Plus</string>
    <string name="minus" translatable="false">Minus</string>
    <string name="note_default_title">Title</string>
    <string name="note_default_text">Note text</string>
    <string name="new_note_bar_title">New Note</string>
    <string name="cancel_text">CANCEL</string>
    <string name="ok_text">OK</string>
    <string name="delete_text">DELETE</string>
    <string name="logout">Logout</string>
    <string name="app_bar_title">My Notes</string>
    <string name="change_color" translatable="false">Change color</string>
    <string name="delete_note" translatable="false">Delete note</string>
</resources>
